--- a/Assessment_one/Web.config
+++ b/Assessment_one/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -19,7 +19,7 @@
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
   <connectionStrings>
-    <add name="AdventureConn" connectionString="Data Source=Localhost;Initial Catalog=AdventureDB;User ID=sa;Password=Server01;Pooling=false;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <add name="AdventureConn" connectionString="Data Source=ARINGORDONS4F2F;Initial Catalog=AdventureDB;User ID=sa;Password=Server01;Pooling=false;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
