--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -52,11 +52,28 @@
     <Compile Include="AdventureContext.cs" />
     <Compile Include="Entities\ProductDescription.cs" />
     <Compile Include="Entities\Product.cs" />
+    <Compile Include="Migrations\201612120629306_initialData.cs" />
+    <Compile Include="Migrations\201612120629306_initialData.Designer.cs">
+      <DependentUpon>201612120629306_initialData.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612120649263_FK_SchemaChanged.cs" />
+    <Compile Include="Migrations\201612120649263_FK_SchemaChanged.Designer.cs">
+      <DependentUpon>201612120649263_FK_SchemaChanged.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201612120629306_initialData.resx">
+      <DependentUpon>201612120629306_initialData.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612120649263_FK_SchemaChanged.resx">
+      <DependentUpon>201612120649263_FK_SchemaChanged.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
