Edited Web.config file, minor tweaks to views and controllers

--- a/Assessment_one/Web.config
+++ b/Assessment_one/Web.config
@@ -18,9 +18,11 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
+  
   <connectionStrings>
-    <add name="AdventureConn" connectionString="Data Source=ARINGORDONS4F2F;Initial Catalog=AdventureDB;User ID=sa;Password=Server01;Pooling=false;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+    <add name="AdventureConn" connectionString="Initial Catalog=AdventureDB;Data Source=(LocalDb)\MSSQLLocalDB ;Integrated Security=SSPI; " providerName="System.Data.SqlClient" />
   </connectionStrings>
+ 
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
