--- a/Assessment_one/Assessment_one.csproj
+++ b/Assessment_one/Assessment_one.csproj
@@ -65,6 +65,10 @@
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -198,9 +202,7 @@
     <Content Include="Views\NewProduct\Index.cshtml" />
     <None Include="Views\Product\Index.cshtml" />
     <Content Include="Views\Search\Index.cshtml" />
-    <Content Include="Views\Product\_ViewStart.cshtml" />
     <Content Include="Views\Search\_ViewStart.cshtml" />
-    <Content Include="Views\Product\_Layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
